[metadata]
name = sslinfo
description = Print the SSL information for a SSL/TLS enabled service
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/sslinfo
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    sslinfo = sslinfo.__main__:main
